# faster-lio

app/: CMakeLists.txt  run_mapping_offline.cc  run_mapping_online.cc
cmake/: packages.cmake
config/: hesai32_mti3dk_handheld.yaml  mid360.yaml  run_fastlio_odom.sh
include/: imu_processing.hpp  laser_mapping.h  laser_mapping_wrap.h  pointcloud_preprocess.h  use-ikfom.hpp
include/ceres/internal/: readme.md
include/ivox3d/: ivox3d.h  ivox3d_node.hpp
launch/: mapping_hesai.launch  mapping_mid360.launch
src/: CMakeLists.txt  imu_processing.cc  laser_mapping.cc  laser_mapping_wrap.cc  pointcloud_preprocess.cc  use-ikfom.cc
